軽微な修正

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Simple Social and Biolink</title>
+  <title>simenatsu</title>
   <link rel="stylesheet" href="./style.css">
 
   <script src="https://kit.fontawesome.com/b466b07c0a.js" crossorigin="anonymous"></script>
@@ -46,7 +46,7 @@
 		  <div class="link_outer">
 			<a href="./calculator/" target="_blank" rel="noopener noreferrer" class="link link_circle link_circle_shadow">
 			  <div class="link_icon">
-				<img class="link_image" src="./.common/calculate.svg">
+				<img class="link_image" src="./common/calculate.svg">
 			  </div>
 			  <div class="link_outer_text">
 				<div class="text text_center">
@@ -61,7 +61,7 @@
 		  <div class="link_outer">
 			<a href="./beta/" target="_blank" rel="noopener noreferrer" class="link link_circle link_circle_shadow">
 			  <div class="link_icon">
-				<img class="link_image" src="./.common/calculate.svg">
+				<img class="link_image" src="./common/calculate.svg">
 			  </div>
 			  <div class="link_outer_text">
 				<div class="text text_center">
@@ -76,7 +76,7 @@
 		  <div class="link_outer">
 			<a href="./pubgm-to-newstate/" target="_blank" rel="noopener noreferrer" class="link link_circle link_circle_shadow">
 			  <div class="link_icon">
-				<img class="link_image" src="./.common/sync.svg">
+				<img class="link_image" src="./common/sync.svg">
 			  </div>
 			  <div class="link_outer_text">
 				<div class="text text_center">
@@ -91,7 +91,7 @@
 			<div class="link_outer">
 			  <a href="./newstate-to-pubgm/" target="_blank" rel="noopener noreferrer" class="link link_circle link_circle_shadow">
 				<div class="link_icon">
-				  <img class="link_image" src="./.common/sync.svg">
+				  <img class="link_image" src="./common/sync.svg">
 				</div>
 				<div class="link_outer_text">
 				  <div class="text text_center">
