リンク修正

--- a/index.html
+++ b/index.html
@@ -1,93 +1,104 @@
 <!DOCTYPE html>
-<html lang="ja" >
-<head>
-  <meta charset="UTF-8">
-  <title>simenatsu</title>
-  <link rel="stylesheet" href="./style.css">
+<html lang="ja">
 
-  <script src="https://kit.fontawesome.com/b466b07c0a.js" crossorigin="anonymous"></script>
+<head>
+	<meta charset="UTF-8">
+	<title>simenatsu</title>
+	<link rel="stylesheet" href="./style.css">
+
+	<script src="https://kit.fontawesome.com/b466b07c0a.js" crossorigin="anonymous"></script>
 
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<section class="main" style="--dark-color:#000;--light-color:#fff;background-color:rgb(209 213 219 / 1);--text-color:#fcfcfc;--link-color:51, 51, 51;--link-background:239, 239, 239;--link-shadow:102, 102, 102;--link-border:51, 51, 51;color:51, 51, 51;">
-  <div class="background">
-	<div class="background_image"></div>
-  </div>
-  <div class="bg_container">
-	<div class="container"></div>
-  </div>
-  <div class="container">
-	<div class="container_component">
-	  <div class="profile">
-		<div class="profile_image"></div>
-		<div class="text text_center text_large">
-		  <span style="font-weight:bold">Natsu</span>
+	<!-- partial:index.partial.html -->
+	<section class="main"
+		style="--dark-color:#000;--light-color:#fff;background-color:rgb(209 213 219 / 1);--text-color:#fcfcfc;--link-color:51, 51, 51;--link-background:239, 239, 239;--link-shadow:102, 102, 102;--link-border:51, 51, 51;color:51, 51, 51;">
+		<div class="background">
+			<div class="background_image"></div>
 		</div>
-		<div class="text text_center">
-		  <h4>端末データ追加、機能追加はTwitterのDMまで気軽に! 作ってほしいツールあれば教えてください!</h4>
+		<div class="bg_container">
+			<div class="container"></div>
 		</div>
-		<div class="container_social"></div>
-		<div class="social">
-		  <a href="https://instagram.com/simenatsu" target="_blank" rel="noopener noreferrer" class="social_link social_link_circle" style="background-color:#efefef;">
-			<img class="social_icon" src="https://sea-static.cdn.phobos.id/assets/svg/instagram.svg">
-		  </a>
-		  <a href="https://twitter.com/simenatsu" target="_blank" rel="noopener noreferrer" class="social_link social_link_circle" style="background-color:#efefef;">
-			<img class="social_icon" src="https://sea-static.cdn.phobos.id/assets/svg/twitter.svg">
-		  </a>
-		  <a href="https://www.youtube.com/channel/UCfHJFC5mqjJuw4A-AcMDNeg" target="_blank" rel="noopener noreferrer" class="social_link social_link_circle" style="background-color:#efefef;">
-			<img class="social_icon" src="https://sea-static.cdn.phobos.id/assets/svg/youtube.svg">
-		  </a>
-		  <a href="https://twitch.tv/simenatsu" target="_blank" rel="noopener noreferrer" class="social_link social_link_circle" style="background-color:#efefef;">
-			<img class="social_icon" src="https://sea-static.cdn.phobos.id/assets/svg/twitch.svg">
-		  </a>
-		</div>
-		<div class="container_link">
-		  <div class="link_outer">
-			<a href="./calculator/" target="_blank" rel="noopener noreferrer" class="link link_circle link_circle_shadow">
-			  <div class="link_icon">
-				<img class="link_image" src="./common/calculate.svg">
-			  </div>
-			  <div class="link_outer_text">
-				<div class="text text_center">
-				  <strong>端末変換</strong>
-				</div>
-			  </div>
-			  <div class="link_end"></div>
-			</a>
-		  </div>
-		</div>
-		<div class="container_link">
-		  <div class="link_outer">
-			<a href="./beta/" target="_blank" rel="noopener noreferrer" class="link link_circle link_circle_shadow">
-			  <div class="link_icon">
-				<img class="link_image" src="./common/calculate.svg">
-			  </div>
-			  <div class="link_outer_text">
-				<div class="text text_center">
-				  <strong>端末変換(Beta)</strong>
-				</div>
-			  </div>
-			  <div class="link_end"></div>
-			</a>
-		  </div>
-		</div>
-		<div class="container_link">
-		  <div class="link_outer">
-			<a href="./pubgm-to-newstate/" target="_blank" rel="noopener noreferrer" class="link link_circle link_circle_shadow">
-			  <div class="link_icon">
-				<img class="link_image" src="./common/sync.svg">
-			  </div>
-			  <div class="link_outer_text">
-				<div class="text text_center">
-				  <strong>PUBGM→NEW STATE</strong>
-				</div>
-			  </div>
-			  <div class="link_end"></div>
-			</a>
-		  </div>
-		</div>
-		<div class="container_link">
+		<div class="container">
+			<div class="container_component">
+				<div class="profile">
+					<div class="profile_image"></div>
+					<div class="text text_center text_large">
+						<span style="font-weight:bold">Natsu</span>
+					</div>
+					<div class="text text_center">
+						<h4>端末データ追加、機能追加はTwitterのDMまで気軽に! 作ってほしいツールあれば教えてください!</h4>
+					</div>
+					<div class="container_social"></div>
+					<div class="social">
+						<a href="https://instagram.com/simenatsu" target="_blank" rel="noopener noreferrer"
+							class="social_link social_link_circle" style="background-color:#efefef;">
+							<img class="social_icon" src="https://sea-static.cdn.phobos.id/assets/svg/instagram.svg">
+						</a>
+						<a href="https://twitter.com/simenatsu" target="_blank" rel="noopener noreferrer"
+							class="social_link social_link_circle" style="background-color:#efefef;">
+							<img class="social_icon" src="https://sea-static.cdn.phobos.id/assets/svg/twitter.svg">
+						</a>
+						<a href="https://www.youtube.com/channel/UCfHJFC5mqjJuw4A-AcMDNeg" target="_blank"
+							rel="noopener noreferrer" class="social_link social_link_circle"
+							style="background-color:#efefef;">
+							<img class="social_icon" src="https://sea-static.cdn.phobos.id/assets/svg/youtube.svg">
+						</a>
+						<a href="https://twitch.tv/simenatsu" target="_blank" rel="noopener noreferrer"
+							class="social_link social_link_circle" style="background-color:#efefef;">
+							<img class="social_icon" src="https://sea-static.cdn.phobos.id/assets/svg/twitch.svg">
+						</a>
+					</div>
+					<div class="container_link">
+						<div class="link_outer">
+							<a href="./calculator/" target="_blank" rel="noopener noreferrer"
+								class="link link_circle link_circle_shadow">
+								<div class="link_icon">
+									<img class="link_image" src="./common/calculate.svg">
+								</div>
+								<div class="link_outer_text">
+									<div class="text text_center">
+										<strong>端末変換</strong>
+									</div>
+								</div>
+								<div class="link_end"></div>
+							</a>
+						</div>
+					</div>
+					<div class="container_link">
+						<div class="link_outer">
+							<a href="./beta/" target="_blank" rel="noopener noreferrer"
+								class="link link_circle link_circle_shadow">
+								<div class="link_icon">
+									<img class="link_image" src="./common/calculate.svg">
+								</div>
+								<div class="link_outer_text">
+									<div class="text text_center">
+										<strong>端末変換(Beta)</strong>
+									</div>
+								</div>
+								<div class="link_end"></div>
+							</a>
+						</div>
+					</div>
+					<div class="container_link">
+						<div class="link_outer">
+							<a href="./pubgm-to-newstate/" target="_blank" rel="noopener noreferrer"
+								class="link link_circle link_circle_shadow">
+								<div class="link_icon">
+									<img class="link_image" src="./common/sync.svg">
+								</div>
+								<div class="link_outer_text">
+									<div class="text text_center">
+										<strong>PUBGM→NEW STATE</strong>
+									</div>
+								</div>
+								<div class="link_end"></div>
+							</a>
+						</div>
+					</div>
+					<!--<div class="container_link">
 			<div class="link_outer">
 			  <a href="./newstate-to-pubgm/" target="_blank" rel="noopener noreferrer" class="link link_circle link_circle_shadow">
 				<div class="link_icon">
@@ -101,12 +112,13 @@
 				<div class="link_end"></div>
 			  </a>
 			</div>
-		  </div>
-	  </div>
-	</div>
-  </div>
-</section>
-<!-- partial -->
-  
+		  </div>-->
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- partial -->
+
 </body>
+
 </html>
