--- a/pubgm-to-newstate/index.html
+++ b/pubgm-to-newstate/index.html
@@ -9,10 +9,10 @@
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@simenatsu" />
 	<meta name="twitter:creator" content="@simenatsu" />
-	<meta property="og:url" content="https://nvtsu.cf/pubgm-to-newstate" />
+	<meta property="og:url" content="https://simenatsu.github.io/pubgm-to-newstate" />
 	<meta property="og:title" content="NEWSTATE感度変換機" />
 	<meta property="og:description" content="PUBGMの感度をNEWSTATEの感度に変換。" />
-	<meta property="og:image" content="https://nvtsu.cf/pubgm-to-newstate/images/summary.png" />
+	<meta property="og:image" content="https://simenatsu.github.io/pubgm-to-newstate/images/summary.png" />
 
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="apple-touch-icon" href="images/icon.png" sizes="120x120">
@@ -43,7 +43,7 @@
 					<p class="control">
 						<a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet"
 							data-social-target="https://twitter.com/simenatsu" target="_blank"
-							href="https://twitter.com/intent/tweet?text=PUBGMOBILE%E2%9E%A8NEWSTATE%E6%84%9F%E5%BA%A6%E5%A4%89%E6%8F%9B%E6%A9%9F%20https%3A%2F%2Fnvtsu.cf%2Fpubgm-to-newstate%20%40simenatsu%E3%82%88%E3%82%8A%20">
+							href="https://twitter.com/intent/tweet?text=PUBGMOBILE%E2%9E%A8NEWSTATE%E6%84%9F%E5%BA%A6%E5%A4%89%E6%8F%9B%E6%A9%9F%20https%3A%2F%2Fsimenatsu.github.io%2Fpubgm-to-newstate%20%40simenatsu%E3%82%88%E3%82%8A%20">
 							<span class="icon">
 								<i class="fab fa-twitter"></i>
 							</span>
@@ -74,11 +74,11 @@
 			<!--<button class="button has-text-centered is-danger js-modal-trigger" data-target="modal-infomation">
 				使い方
 			</button>-->
-			<p class="control">
-				<a class="button has-text-centered is-danger js-modal-trigger" href="https://nvtsu.cf/newstate-to-pubgm" target="_blank">
+			<!--<p class="control">
+				<a class="button has-text-centered is-danger js-modal-trigger" href="https://simenatsu.github.io/newstate-to-pubgm" target="_blank">
 					NEWSTATE ➨ PUBGM
 				</a>
-			</p>
+			</p>-->
 		</div>
 	</section>
 	<section class="section">
